# learning3d

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
data_utils/: __init__.py  dataloaders.py  user_data.py
examples/: test_curvenet.py  test_dcp.py  test_deepgmr.py  test_flownet.py  test_masknet.py  test_masknet2.py  test_pcn.py  test_pcrnet.py  test_pnlk.py  test_pointnet.py  test_rpmnet.py  train_PointNetLK.py  train_dcp.py  train_deepgmr.py  train_flownet.py  train_masknet.py  train_pcn.py  train_pcrnet.py  train_pointnet.py  train_rpmnet.py
learning3d/data_utils/: dataloaders.py
learning3d/examples/: test_deepgmr.py  test_pcrnet.py  test_pnlk.py  test_pointconv.py  test_prnet.py  train_pointconv.py  train_pointnet.py
learning3d/losses/: correspondence_loss.py
learning3d/models/: __init__.py  curvenet.py  deepgmr.py
learning3d/ops/: se3.py
learning3d/pretrained/exp_ipcrnet/: events.out.tfevents.1584152656.bioroboticslab
learning3d/pretrained/exp_prnet/: args.txt  log
learning3d/utils/: __init__.py  curvenet_util.py
learning3d/utils/lib/: pointnet2_modules.py
losses/: __init__.py  chamfer_distance.py  classification.py  emd.py  frobenius_norm.py  rmse_features.py
losses/cuda/chamfer_distance/: __init__.py
models/: __init__.py  basic_models.py  classifier.py  dcp.py  deepgmr.py  dgcnn.py  feature_models.py  flownet3d.py  loss_functions.py  pcn.py  pcrnet.py  pointconv.py  pointnet.py  pointnetlk.py  pooling.py  prnet.py  registration_models.py  segmentation.py
ops/: data_utils.py  invmat.py  quaternion.py  se3.py  so3.py  transform_functions.py
ops/losses/chamfer_distance/: chamfer_distance.cu  (+1 more)
pretrained/exp_classifier/: events.out.tfevents.1583956166.bioroboticslab
pretrained/exp_pcn/: events.out.tfevents.1584988327.lambda-dual
pretrained/exp_pnlk/: events.out.tfevents.1584591855.bioroboticslab
utils/: __init__.py  model_common_utils.py  pointconv_util.py  ppfnet_util.py  svd.py  transformer.py
utils/lib/: setup.py
(+68 files in other folders)
